package document.state;

public enum Rol {
    Admin, User
}
