package document.state;

public enum Actions {
    Publish, Approved, ReviewFailed
}
