@startuml

title __ABSTRACT_STATE's Class Diagram__\n

  namespace document.abstractstate {
    enum Actions {
      Approved
      Publish
      ReviewFailed
    }
  }
  

  namespace document.abstractstate {
    class document.abstractstate.Document {
        ~ data : Date
        ~ title : String
        + Document()
        + changeState()
        + render()
        + toString()
        + update()
    }
  }
  

  namespace document.abstractstate {
    class document.abstractstate.DocumentTestDrive {
        {static} + main()
    }
  }
  

  namespace document.abstractstate {
    class document.abstractstate.DraftState {
        + DraftState()
        + setDocument()
        + render()
        + update()
    }
  }
  

  namespace document.abstractstate {
    class document.abstractstate.ModerationState {
        + ModerationState()
        + setDocument()
        + render()
        + update()
    }
  }
  

  namespace document.abstractstate {
    class document.abstractstate.PublishedState {
        + PublishedState()
        + setDocument()
        + render()
        + update()
    }
  }
  

  namespace document.abstractstate {
    enum Rol {
      Admin
      User
    }
  }
  

  namespace document.abstractstate {
    abstract class document.abstractstate.State {
        {abstract} + setDocument()
        {abstract} + render()
        {abstract} + update()
    }
  }
  

  document.abstractstate.Document o-up- document.abstractstate.State : currentState
  document.abstractstate.DraftState .down.|> document.abstractstate.State
  document.abstractstate.DraftState o-- document.abstractstate.Document : doc
  document.abstractstate.ModerationState .down.|> document.abstractstate.State
  document.abstractstate.ModerationState o-- document.abstractstate.Document : doc
  document.abstractstate.PublishedState .down.|> document.abstractstate.State
  document.abstractstate.PublishedState o-- document.abstractstate.Document : doc
document.abstractstate.DocumentTestDrive -right->document.abstractstate.Document: uses
document.abstractstate.Document o-right- document.abstractstate.Rol :uses
document.abstractstate.Document o-down- document.abstractstate.Actions :uses

note left of document.abstractstate.Document
    State currentState;
    Date data;
    String title;
    ...
        public void update(Rol role, Actions action ) {
            currentState.update(role, action);
        }
        public void changeState(State state) {
            currentState = state;
        }
        public void render() {
           System.out.println(this);
           currentState.render();
        }
end note

note left of document.abstractstate.DraftState
    public class DraftState extends State {

        public DraftState(Document document) {
            super(document);
        }
        @Override
        public void render() {
            System.out.println("Draft");
        }

        @Override
        public void update(Rol role, Actions action) {
            if (role == Rol.User)
                doc.changeState(new ModerationState(doc));
            else if (role == Rol.Admin)
                doc.changeState(new PublishedState(doc));
        }
    }
end note
note left of document.abstractstate.State
    public abstract class State {

    	protected Document doc;

    	protected State(Document doc) {
    		this.doc = doc;
    	}

    	public void setDocument(Document doc) {
    		this.doc = doc;
    	}

    	abstract public void render();
    	abstract public void update(Rol rol, Actions action);
    }
end note

note bottom of document.abstractstate.DocumentTestDrive
public static void main(String[] args) {
        ...
       date = formatter.parse(date_string);
       doc = new Document("Prova de canvis d'estat", date);
       doc.changeState(new DraftState(doc));
       doc.render();
       doc.update(Rol.User, Actions.Publish);
       ....
end note
right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
